--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Maze generator with command lines",
   "repository": {
     "type": "git",
-    "directory": "https://"
+    "url": "https://github.com/karikera/bdsx-maze-generator.git"
   },
   "main": "index.js",
   "keywords": [],
